Have incorporated css style rule to change the text for each of the ticks on the x-axis of the bar charts, so that they are displayed at 45 degree angle, to stop them overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,11 +105,11 @@
 }
 
 /*--- Bar Charts Axis Labels ---*/
-#publisher-global-sales .x.axis label,
+/*--- #publisher-global-sales .x.axis label,
 #north-america-genre-sales .x.axis label,
 #europe-genre-sales .x.axis label,
 #rest-of-world-genre-sales .x.axis label{
-    transform: translateX(50px);
 }
+---/*
 
 
